--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Edit.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Edit.cshtml
@@ -43,7 +43,7 @@
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
         <button type="submit" class="btn bg-success text-white" href="/Course/Edit?courseId=@Model.Id">Edit</button>
-        <a href="/Course/Details?courseId=@Model.Id" class="btn bg-success text-white">Back To Event</a>
+        <a href="/Course/Details?id=@Model.Id" class="btn bg-success text-white">Back To Course</a>
     </div>
 </form>
 
