--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
@@ -24,7 +24,7 @@
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
         <button type="submit" class="btn bg-success text-white" href="/Event/CreatePost?courseId=@Model.CourseId">Create</button>
-        <a href="/Event/All" class="btn bg-success text-white">Back To Courses</a>
+        <a href="/Course/Details?id=@Model.CourseId" class="btn bg-success text-white">Back To Courses</a>
     </div>
 </form>
 
