--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Create.cshtml
@@ -20,6 +20,6 @@
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
         <button type="submit" class="btn bg-success text-white" href="/Exercise/Create?homeworkId=@Model.HomeworkId">Create</button>
-        <a href="/Course/All?homeworkId=@Model.HomeworkId" class="btn bg-success text-white">Back To Homework</a>
+        <a href="/Homework/Details?id=@Model.HomeworkId" class="btn bg-success text-white">Back To Homework</a>
     </div>
 </form>
