--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Edit.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Edit.cshtml
@@ -19,6 +19,6 @@
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
         <button type="submit" class="btn bg-success text-white" href="/Exercise/Edit?exerciseId=@Model.Id">Edit</button>
-        <a href="/Exercise/Details?exerciseId=@Model.Id" class="btn bg-success text-white">Back To Event</a>
+        <a href="/Exercise/Details?id=@Model.Id" class="btn bg-success text-white">Back</a>
     </div>
 </form>
