--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/All.cshtml
@@ -4,81 +4,104 @@
     this.ViewData["Title"] = "All Courses";
 }
 
-@*<div class="text-center">
-        <h1 class="display-4">All Courses!</h1>
-    </div>*@
 
-<hr class="bg-success" style="height: 2px" />
-<main>
-    <h1>All Courses</h1>
+@{
+    var id = "";
     <hr class="bg-success" style="height: 2px" />
-    <a class="btn btn-success text-white" href="/Course/Create">Create Course</a>
-    <a class="btn btn-success text-white" href="/Course/Old">Old Courses</a>
-    <hr class="bg-success" style="height: 2px" />
-    <div id="albums">
-        @foreach (var course in Model.Courses)
-        {
-            <div>
-                <h3>
-                    <a href="/Course/Details?id=@course.Id">@course.Name</a>
-                </h3>
-                <a class="btn btn-success text-white float-lg-right" href="/Course/Delete?id=@course.Id">Delete</a>
-            </div>
-        }
-    </div>
-</main>
-<hr />
-<nav>
-    <ul class="pagination justify-content-center">
-        @if (this.Model.CurrentPage == 1)
-        {
-            <li class="page-item disabled">
-                <a class="page-link" href="#">Previous</a>
-            </li>
-        }
-        else
-        {
-            <li class="page-item">
-                <a class="page-link"
-                   asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
-            </li>
-        }
-
-
-        @for (int i = 1; i <= this.Model.PagesCount; i++)
-        {
-            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
-            if (i == this.Model.CurrentPage)
+    <main>
+        <h1>All Courses</h1>
+        <hr class="bg-success" style="height: 2px" />
+        <a class="btn btn-success text-white" href="/Course/Create">Create Course</a>
+        <hr class="bg-success" style="height: 2px" />
+        <div id="albums">
+            @foreach (var course in Model.Courses)
             {
-                active = "active";
+               id = @course.Id;
+                <div class="row">
+                    <h3 class="col-md-5">
+                        <a href="/Course/Details?id=@course.Id">@course.Name</a>
+                    </h3>
+                    <div class="text-center col-md-4">
+                        <a href="#myModal" class="trigger-btn btn btn-success" data-toggle="modal">Delete</a>
+                    </div>
+                </div>
+            }
+        </div>
+
+        <div id="myModal" class="modal fade">
+            <div class="modal-dialog modal-confirm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="icon-box">
+                            <i class="material-icons">&#xE5CD;</i>
+                        </div>
+                        <h4 class="modal-title">Are you sure?</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Do you really want to delete these records? This process cannot be undone.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Cancel</button>
+                        <a href="/Course/Delete?id=@id" class="btn btn-success text-white float-lg-right">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <hr />
+    <nav>
+        <ul class="pagination justify-content-center">
+            @if (this.Model.CurrentPage == 1)
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Previous</a>
+                </li>
             }
             else
             {
-                active = string.Empty;
-            }
-            <li class="page-item @active">
-                <div>
+                <li class="page-item">
                     <a class="page-link"
-                       asp-controller="Course"
-                       asp-action="All"
-                       asp-route-page="@i">
-                        @i
-                    </a>
-                </div>
-            </li>
-        }
-        @if (this.Model.CurrentPage == this.Model.PagesCount)
-        {
-            <li class="page-item disabled">
-                <a class="page-link" href="#">Next</a>
-            </li>
-        }
-        else
-        {
-            <li class="page-item">
-                <a class="page-link"
-                   asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
-            </li>
-        }
-    </ul>
-</nav>
+                       asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
+                </li>
+            }
+
+
+            @for (int i = 1; i <= this.Model.PagesCount; i++)
+            {
+                var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+                if (i == this.Model.CurrentPage)
+                {
+                    active = "active";
+                }
+                else
+                {
+                    active = string.Empty;
+                }
+                <li class="page-item @active">
+                    <div>
+                        <a class="page-link"
+                           asp-controller="Course"
+                           asp-action="All"
+                           asp-route-page="@i">
+                            @i
+                        </a>
+                    </div>
+                </li>
+            }
+            @if (this.Model.CurrentPage == this.Model.PagesCount)
+            {
+                <li class="page-item disabled">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+            }
+            else
+            {
+                <li class="page-item">
+                    <a class="page-link"
+                       asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
+                </li>
+            }
+        </ul>
+    </nav>
+}
