--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Details.cshtml
@@ -4,14 +4,12 @@
     this.ViewData["Title"] = "Information about events";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Hello form Details</h1>
-</div>
+<h1 class="display-4">Details</h1>
 <hr />
-<div class="course-details d-flex justify-content-between row">
-    <div class="course-data col-md-5">
+<div class="blog margin-bottom-40 d-flex justify-content-between">
+    <div class="course-data justify-content-center col-md-7">
         <div class="card-header">Event Name: @Model.Name</div>
-        <div class="card-header">Event Date: @Convert.ToDateTime(@Model.Date).ToString("dd-MM-yyyy")</div>
+        <div class="card-header">Event Date: @Model.Date</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Event" asp-action="All">Back To All</a>
             <a class="nav-link bg-success text-white" href="/Event/Edit?eventId=@Model.Id">Edit</a>
