--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Edit.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Edit.cshtml
@@ -23,7 +23,7 @@
     <hr class="bg-success mt-5" style="height: 2px" />
     <div class="d-flex justify-content-around mt-4">
         <button type="submit" class="btn bg-success text-white" href="/Event/Edit?eventId=@Model.Id">Edit</button>
-        <a href="/Event/Details?eventId=@Model.Id" class="btn bg-success text-white">Back To Event</a>
+        <a href="/Event/Details?id=@Model.Id" class="btn bg-success text-white">Back To Event</a>
     </div>
 </form>
 
