--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
@@ -4,12 +4,9 @@
 }
 
 <h1>Details</h1>
-
-<div class="text-center">
-    <h1 class="display-4">Hello form Details</h1>
-</div>
 <hr />
-<div class="course-details d-flex justify-content-between row">
+
+<div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data col-md-5">
         <div class="card-header">Exercise Name: @Model.Name</div>
         <div class="card-header">Exercise Condition: @Model.Condition</div>
