--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Home/Index.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Home/Index.cshtml
@@ -5,5 +5,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2 margintodetails>
+        Hello, everybody!
+        Let's start to help you do not forgot your exams, events, courses and homeworks!
+        Make a registration and enjoy to my website!
+    </h2>
 </div>
