--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
@@ -4,11 +4,11 @@
 }
 
 <h1>Details</h1>
-
-<div class="course-details d-flex justify-content-between row">
-    <div class="course-data col-md-5">
+<hr />
+<div class="blog margin-bottom-40 d-flex justify-content-between">
+    <div class="course-data justify-content-center col-md-7">
         <div class="card-header">Homework Name: @Model.Name</div>
-        <div class="card-header">Homework Date: @Convert.ToDateTime(@Model.EndDate).ToString("dd-MM-yyyy")</div>
+        <div class="card-header">Homework Date: @Model.EndDate</div>
         <div class="card-header">Homework Description: @Model.Description</div>
         <div class="d-flex justify-content-between">
             <a class="btn bg-success text-white" asp-controller="Homework" asp-action="All">Back To All</a>
