--- a/C#/Web Project/Web/StudentsSystem.Web/wwwroot/css/site.css
+++ b/C#/Web Project/Web/StudentsSystem.Web/wwwroot/css/site.css
@@ -44,6 +44,9 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    background-image: url("photo-1580460848325-6b8d06d628cc.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 .footer {
     position: absolute;
@@ -53,4 +56,7 @@ body {
     /* Set the fixed height of the footer here */
     height: 60px;
     line-height: 60px; /* Vertically center the text there */
+}
+.margintodetails {
+    margin-top: 100px;
 }
