--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - Privacy
+            <div class="card-header text-white"><h4>&copy; @DateTime.Now.Year - @GlobalConstants.SystemName - Antonio Velev</h4></div>
         </div>
     </footer>
 
