--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/All.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/All.cshtml
@@ -16,7 +16,7 @@
         <div id="albums">
             @foreach (var course in Model.Courses)
             {
-               id = @course.Id;
+                id = @course.Id;
                 <div class="row">
                     <h3 class="col-md-5">
                         <a href="/Course/Details?id=@course.Id">@course.Name</a>
@@ -49,59 +49,63 @@
             </div>
         </div>
     </main>
-    <hr />
-    <nav>
-        <ul class="pagination justify-content-center">
-            @if (this.Model.CurrentPage == 1)
-            {
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Previous</a>
-                </li>
-            }
-            else
-            {
-                <li class="page-item">
-                    <a class="page-link"
-                       asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
-                </li>
-            }
-
-
-            @for (int i = 1; i <= this.Model.PagesCount; i++)
-            {
-                var active = i == this.Model.CurrentPage ? "active" : string.Empty;
-                if (i == this.Model.CurrentPage)
-                {
-                    active = "active";
-                }
-                else
-                {
-                    active = string.Empty;
-                }
-                <li class="page-item @active">
-                    <div>
-                        <a class="page-link"
-                           asp-controller="Course"
-                           asp-action="All"
-                           asp-route-page="@i">
-                            @i
-                        </a>
-                    </div>
-                </li>
-            }
-            @if (this.Model.CurrentPage == this.Model.PagesCount)
-            {
-                <li class="page-item disabled">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            }
-            else
-            {
-                <li class="page-item">
-                    <a class="page-link"
-                       asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
-                </li>
-            }
-        </ul>
-    </nav>
 }
+<hr />
+
+<nav>
+    <ul class="pagination justify-content-center">
+        @if (this.Model.CurrentPage == 1)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Previous</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-route-page="@(this.Model.CurrentPage - 1)">Previous</a>
+            </li>
+        }
+
+
+        @for (int i = 1; i <= this.Model.PagesCount; i++)
+        {
+            var active = i == this.Model.CurrentPage ? "active" : string.Empty;
+
+            //if (i == this.Model.CurrentPage)
+            //{
+            //    active = "active";
+            //}
+            //else
+            //{
+            //    active = string.Empty;
+            //}
+            <li class="page-item @active">
+                <div>
+                    <a class="page-link"
+                       asp-controller="Course"
+                       asp-action="All"
+                       asp-route-page="@i">
+                        @i
+                    </a>
+                </div>
+            </li>
+        }
+
+        @if (this.Model.CurrentPage == this.Model.PagesCount)
+        {
+            <li class="page-item disabled">
+                <a class="page-link" href="#">Next</a>
+            </li>
+        }
+        else
+        {
+            <li class="page-item">
+                <a class="page-link"
+                   asp-route-page="@(this.Model.CurrentPage + 1)">Next</a>
+            </li>
+        }
+    </ul>
+</nav>
+
