--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/OldCourseDetails.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/OldCourseDetails.cshtml
@@ -7,13 +7,14 @@
 
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
-        <div class="card-header">Course Name: @Model.Name</div>
-        <div class="card-header">Course StartOn:@Model.StartOn</div>
-        <div class="card-header">Course EndOn: @Model.EndOn</div>
-        <div class="card-header">Course Duration: @Model.Duration</div>
-        <div class="card-header">Course Description: @Model.Description</div>
-        <div class="card-header">Course Grade: @Model.Grade</div>
-        <div class="d-flex justify-content-between">
+        <div class="card-header"><h3>Course Name: @Model.Name</h3></div>
+        <div class="card-header"><h3>Course StartOn:@Model.StartOn</h3></div>
+        <div class="card-header"><h3>Course EndOn: @Model.EndOn</h3></div>
+        <div class="card-header"><h3>Course Duration: @Model.Duration</h3></div>
+        <div class="card-header"><h3>Course Description: @Model.Description</h3></div>
+        <div class="card-header"><h3>Course Grade: @Model.Grade</h3></div>
+        <hr class="bg-success mt-5" style="height: 2px" />
+        <div class="d-flex justify-content-around mt-4">
             <a class="btn bg-success text-white asd" asp-controller="Course" asp-action="Old">Back To All</a>
         </div>
     </div>
