--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
@@ -8,9 +8,10 @@
 
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data col-md-5">
-        <div class="card-header">Exercise Name: @Model.Name</div>
-        <div class="card-header">Exercise Condition: @Model.Condition</div>
-        <div class="d-flex justify-content-between">
+        <div class="card-header"><h3>Exercise Name: @Model.Name</h3></div>
+        <div class="card-header"><h3>Exercise Condition: @Model.Condition</h3></div>
+        <hr class="bg-success mt-5" style="height: 2px" />
+        <div class="d-flex justify-content-around mt-4">
             <a class="btn bg-success text-white" asp-controller="Exercise" asp-action="All">Back To All</a>
             <a class="nav-link bg-success text-white" href="/Exercise/Edit?exerciseId=@Model.Id">Edit</a>
         </div>
