--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Details.cshtml
@@ -7,12 +7,12 @@
 <hr />
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
-        <div class="card-header">Homework Name: @Model.Name</div>
-        <div class="card-header">Homework Date: @Model.EndDate</div>
-        <div class="card-header">Homework Description: @Model.Description</div>
-        <div class="d-flex justify-content-between">
+        <div class="card-header text-black-50"><h3>Homework Name: @Model.Name</h3></div>
+        <div class="card-header text-black-70"><h3>Homework Date: @Model.EndDate</h3></div>
+        <div class="card-header text-black-opacity-05"><h3>Homework Description: @Model.Description</h3></div>
+        <hr class="bg-success mt-5" style="height: 2px" />
+        <div class="d-flex justify-content-around mt-4">
             <a class="btn bg-success text-white" asp-controller="Homework" asp-action="All">Back To All</a>
-            @*<button type="submit" class="btn bg-success text-white" href="/Homework/Edit?homeworkId=@Model.Id">Edit</button>*@
             <a class="nav-link bg-success text-white" href="/Homework/Edit?homeworkId=@Model.Id">Edit</a>
             <a class="nav-link bg-success text-white" asp-area="" asp-controller="Exercise" asp-action="Create" asp-route-homeworkId="@Model.Id">Create Exercise</a>
         </div>
