--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/OldHomeworksDetails.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/OldHomeworksDetails.cshtml
@@ -8,10 +8,11 @@
 <hr />
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
-        <div class="card-header">Homework Name: @Model.Name</div>
-        <div class="card-header">Homework Date: @Model.EndDate</div>
-        <div class="card-header">Homework Description: @Model.Description</div>
-        <div class="d-flex justify-content-between">
+        <div class="card-header"><h3>Homework Name: @Model.Name</h3></div>
+        <div class="card-header"><h3>Homework Date: @Model.EndDate</h3></div>
+        <div class="card-header"><h3>Homework Description: @Model.Description</h3></div>
+        <hr class="bg-success mt-5" style="height: 2px" />
+        <div class="d-flex justify-content-around mt-4">
             <a class="nav-link bg-success text-white" asp-area="" asp-controller="Homework" asp-action="Old" asp-route-homeworkId="@Model.Id">Back To All</a>
         </div>
     </div>
