--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/OldCourseDetails.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/OldCourseDetails.cshtml
@@ -3,8 +3,9 @@
     ViewData["Title"] = "OldCourseDetails";
 }
 
-<h1>OldCourseDetails</h1>
-
+<h1>Old Course Details</h1>
+<hr class="bg-success" style="height: 2px" />
+<hr />
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
         <div class="card-header"><h3>Course Name: @Model.Name</h3></div>
