--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Event/Create.cshtml
@@ -9,6 +9,7 @@
     <link href="~/bootstrap-datepicker/css/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
 }
 
+<h1>Create Event</h1>
 
 <form method="post" asp-controller="Event" asp-action="CreatePost" asp-route-courseId="@Model.CourseId">
     <div>
