--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Create.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<h1>Create</h1>
+<h1>Create Exercise</h1>
 
 <form method="post" asp-controller="Exercise" asp-action="Create" asp-route-homeworkId="@Model.HomeworkId">
     <div>
