--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Create.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Create.cshtml
@@ -7,7 +7,7 @@
     <link href="~/bootstrap-datepicker/css/bootstrap-datepicker.standalone.min.css" rel="stylesheet" />
 }
 
-<h1>Create</h1>
+<h1>Create Homework</h1>
 
 <form method="post" asp-controller="Homework" asp-action="Create" asp-route-courseId="@Model.CourseId">
     <div>
