--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Edit.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Edit.cshtml
@@ -30,7 +30,7 @@
         <label asp-for="IsReady"></label>
         <div class="custom-control custom-checkbox">
             <input asp-for="IsReady" type="checkbox" class="custom-control-input" id="defaultUnchecked">
-            <label class="custom-control-label" for="defaultUnchecked">Check if your homework is ready!</label>
+            <label class="custom-control-label" for="defaultUnchecked">Click if your homework is ready!</label>
         </div>
         <span asp-validation-for="IsReady"></span>
     </div>
