--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Old.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/Old.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Old Homeworks";
 }
 
-<h1>Old Courses</h1>
+<h1>Old Homeworks</h1>
 
 <main>
     <hr class="bg-success" style="height: 2px" />
