--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Course/Details.cshtml
@@ -4,9 +4,10 @@
     this.ViewData["Title"] = "Information about course";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Hello form Details</h1>
-</div>
+
+<h1>Course Details</h1>
+
+<hr class="bg-success" style="height: 2px" />
 <hr />
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
