--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Exercise/Details.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Exercise Details</h1>
+<hr class="bg-success" style="height: 2px" />
 <hr />
 
 <div class="blog margin-bottom-40 d-flex justify-content-between">
