--- a/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/OldHomeworksDetails.cshtml
+++ b/C#/Web Project/Web/StudentsSystem.Web/Views/Homework/OldHomeworksDetails.cshtml
@@ -3,9 +3,10 @@
     ViewData["Title"] = "OldHomeworksDetails";
 }
 
-<h1>OldHomeworksDetails</h1>
-
+<h1>Old Homework Details</h1>
+<hr class="bg-success" style="height: 2px" />
 <hr />
+
 <div class="blog margin-bottom-40 d-flex justify-content-between">
     <div class="course-data justify-content-center col-md-7">
         <div class="card-header"><h3>Homework Name: @Model.Name</h3></div>
